gitops-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellogo
  namespace: gitops-app
spec:
  selector:
    app: hellogo
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
