gitops-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellogo
  namespace: gitops-app
spec:
  ingressClassName: traefik
  rules:
    - host: hellogo.44.203.173.197.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hellogo
                port:
                  number: 80
